# SylarX

./: CMakeLists.txt
include/sylarx/log/: log.h
src/: CMakeLists.txt
src/log/: CMakeLists.txt  log.cc
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/log/: CMakeLists.txt  test_logger.cc
